# Sentinal

./: .gitignore  CLAUDE.md  README.md  TEAM.md
.github/workflows/: release.yml
backend/: README.md  pyproject.toml
backend/tests/: test_core.py  test_scanner.py
backend/vibesentinel_core/: __init__.py  _resources.py  environment.py  ids.py  main.py  monitor.py  serve.py
backend/vibesentinel_core/demo_assets/: demo_server.py
backend/vibesentinel_core/env_image/: Dockerfile  ptybroker.py  traffic.py
backend/vibesentinel_scanner/: __init__.py  dependency_cve.py  docker_checks.py  findings.py  scanner.py  secrets_scan.py  weak_credentials.py
cli/: .gitignore  README.md  pyproject.toml  requirements.txt
cli/sentinal/: __init__.py  __main__.py  _resources.py  app.py  ban_api.py  build.py  client.py  config.py  container.py  fim.py  local_api.py  pipeline.py  scanner.py  state.py
cli/tests/: test_build.py  test_cli_smoke.py  test_local_api.py
cli/vibesentinel_cli/: __main__.py  app.py  ban_api.py  client.py  config.py  log_tail.py
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: GlassPanel.jsx  LiveFeed.jsx  MaterialIcon.jsx  ProgressBar.jsx  ScoreGauge.jsx  SeverityBadge.jsx  StatusDot.jsx  TopNav.jsx
dashboard/src/lib/: api.js  auth.jsx  core.js  mockData.js
dashboard/src/pages/: Activity.jsx  Attacks.jsx  Containers.jsx  Documentation.jsx  Environment.jsx  Findings.jsx  Login.jsx  Overview.jsx  Security.jsx  Settings.jsx  Terminal.jsx
docs/: MODEL_STATS.md  PITCH.md  SPEC.md  VULNERABILITY_CHECKLIST.md
model/: .gitignore  README.md  pyproject.toml  requirements.txt
model/artifacts/models/: csic2010.log_anomaly_model.joblib  loghub-apache.log_anomaly_model.joblib  loghub-linux.log_anomaly_model.joblib  loghub-ssh.log_anomaly_model.joblib  nginx.log_anomaly_model.joblib
model/datasets/: SOURCES.md
model/examples/: run_demo.py  synthetic_logs.py
model/scripts/: csic_dataset.py  export_onnx_model.py  fetch_nginx_dataset.py  heuristics.py  prepare_datasets.py  train_baseline.py
model/tests/: test_escalation.py  test_pipeline.py  test_signatures.py
model/vibesentinel_model/: __init__.py  _resources.py  anomaly.py  drain3_config.ini  embedder.py  escalation.py  log_parser.py  pipeline.py  signatures.py
packaging/: build_binary.sh  build_deb.sh  entry.py  landing-install.sh  sentinal.spec
scripts/: install.sh  upgrade.sh
