[project]
name = "vibesentinel-scanner"
version = "0.1.0"
description = "VibeSentinel startup vulnerability scanner: secrets, docker misconfig, dependency CVEs, weak credentials"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibesentinel_scanner*"]
