[project]
name = "vibesentinel-scanner"
version = "0.2.0"
description = "VibeSentinel startup vulnerability scanner: secrets, docker misconfig, dependency CVEs, weak credentials"
requires-python = ">=3.10"  # no 3.11-only syntax/stdlib used; 3.10 covers Ubuntu 22.04 LTS's default python3
dependencies = [
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibesentinel_scanner*"]
