[project]
name = "vibesentinel-scanner"
version = "0.3.4"
description = "VibeSentinel startup vulnerability scanner: secrets, docker misconfig, dependency CVEs, weak credentials"
requires-python = ">=3.10"  # no 3.11-only syntax/stdlib used; 3.10 covers Ubuntu 22.04 LTS's default python3
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
# The hosted management core (vibesentinel_core): FastAPI + websockets.
# Kept optional so the scanner library stays lightweight to install on its own.
core = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
# One-command launcher for the hosted platform. Needs the [core] extra
# installed (FastAPI/uvicorn); errors clearly at runtime otherwise.
sentinal-core = "vibesentinel_core.serve:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibesentinel_scanner*", "vibesentinel_core*"]
