[project]
name = "vibesentinel-cli"
version = "0.1.0"
description = "VibeSentinel sentinel-agent CLI: target registration, log tailing, FIM, local ban API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "watchdog>=4.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
]

[project.scripts]
vibesentinel-cli = "vibesentinel_cli.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibesentinel_cli*"]
