[project]
name = "sentinal"
version = "0.1.0"
description = "Sentinal sentinel-agent CLI: launches the monitored container, runs the backend startup scan, streams logs into /model, coordinates IP bans"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "watchdog>=4.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
]

[project.scripts]
sentinal = "sentinal.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentinal*"]
