[project]
name = "vibesentinel-model"
version = "0.1.0"
description = "VibeSentinel local anomaly detection: Drain3 + ONNX MiniLM + Isolation Forest"
requires-python = ">=3.10"  # no 3.11-only syntax/stdlib used; 3.10 covers Ubuntu 22.04 LTS's default python3

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vibesentinel_model*"]
